crates/bevy_ecs_compile_fail_tests/tests/ui/system_query_iter_many_mut_lifetime_safety.stderr
error[E0499]: cannot borrow `iter` as mutable more than once at a time
 --> tests/ui/system_query_iter_many_mut_lifetime_safety.rs:9:25
  |
9 |     while let Some(a) = iter.fetch_next() {
  |                         ^^^^^^^^^^^^^^^^^ `iter` was mutably borrowed here in the previous iteration of the loop
