crates/bevy_ecs_compile_fail_tests/tests/ui/system_query_iter_many_mut_lifetime_safety.rs
use bevy_ecs::prelude::*;

#[derive(Component)]
struct A(usize);

fn system(mut query: Query<&mut A>, e: Res<Entity>) {
    let mut results = Vec::new();
    let mut iter = query.iter_many_mut([*e, *e]);
    while let Some(a) = iter.fetch_next() {
        // this should fail to compile
        results.push(a);
    }
}

fn main() {}
